# hf-cpu-clip

./: pyproject.toml
src/: classification.py  object_detection.py
